add_subdirectory(arnold)
#add_subdirectory(bigpulp)
#add_subdirectory(multino)
#add_subdirectory(oprecompkw)
#add_subdirectory(oprecompkw_sa)
#add_subdirectory(pulp)
#add_subdirectory(pulp_v1)
#add_subdirectory(pulpissimo)
#add_subdirectory(pulpissimo_v1)
#add_subdirectory(usoc_v1)
#add_subdirectory(vivosoc3_1)
#add_subdirectory(wolfe)